...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Provision-->
        <scene sceneID="ftx-5u-jbA">
            <objects>
                <tableViewController title="Provision" id="pMb-IM-ACF" customClass="ProvisionViewController" customModule="ble_mesh_app" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="102" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" id="MlV-Dz-hnY">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="0.25176323781388887" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="ZQ4-of-vmu">
...
                            <outlet property="delegate" destination="pMb-IM-ACF" id="PGp-nk-VgK"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Provision" id="VXD-G0-Chr">
                        <barButtonItem key="rightBarButtonItem" title="Scan" id="1r9-qS-DGK">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="scan_button"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="scanButtonTapped:" destination="pMb-IM-ACF" id="m5D-at-Rb2"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Db3-S6-CQi" id="tBp-tX-w69"/>
                            <outlet property="delegate" destination="Db3-S6-CQi" id="1Be-fu-dut"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Networks" id="ARh-sB-z9K"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uVP-ME-ShK" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3049" y="440"/>
        </scene>
        <!--Provision-->
...
