...
                                                    </subviews>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="network field">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="Y4O-bd-yxz"/>
                    </view>
                    <navigationItem key="navigationItem" title="Networks" id="UI2-qh-MnO">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jFh-OA-DFY">
                            <connections>
...
                                        <rect key="frame" x="16" y="16" width="343" height="29"/>
                                        <segments>
                                            <segment title="Groups"/>
                                            <segment title="Devices"/>
                                        </segments>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adj-Gs-cKg" customClass="Add">
                                                    <rect key="frame" x="16" y="16" width="40" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </prototypes>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No groups" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBZ-rV-gDK">
                                <rect key="frame" x="146" y="246.5" width="83" height="21"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="oAh-3d-J4d"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add network" id="nFo-as-Wam">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="U1N-3x-u3H">
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="j9X-ZZ-Aqn"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add group" id="T5x-dt-tEd">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="CZb-bd-gUs">
                            <connections>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDY-l6-52p">
                                                    <rect key="frame" x="16" y="11" width="64.5" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
