...
                self?.viewModel.stopScanForDevices()
        })
        devicesSubscription?.disposed(by: disposeBag)
    }
    
    private func showBluetoothDialog() {
        SVProgressHUD.showError(withStatus: "Bluetooth Disabled")
        SVProgressHUD.dismiss(withDelay: 1.5)
    }
    
    private func stopScanning() {
        setScanButtonScanText()
        viewModel.stopScanForDevices()
...
