...
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        if viewModel.isConnected {
            performSegue(withIdentifier: Storyboard.Network.Segue.showGroup, sender: groups[indexPath.row].name)
        } else {
            SVProgressHUD.showError(withStatus: "You are not connected to network")
            SVProgressHUD.dismiss(withDelay: 1.0)
        }
        
        tableView.deselectRow(at: indexPath, animated: true)
    }
    
...
